Project

General

Profile

Actions

Bug #25180

closed

ObjectStore/StoreTest.CompressionTest/2 fail

Added by Sage Weil over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-07-30T14:05:00.563 INFO:teuthology.orchestra.run.smithi187.stdout:[ RUN      ] ObjectStore/StoreTest.CompressionTest/2
2018-07-30T14:05:01.646 INFO:teuthology.orchestra.run.smithi187.stderr:Creating collection meta
2018-07-30T14:05:01.646 INFO:teuthology.orchestra.run.smithi187.stderr:Creating object #-1:68309cac:::Object 1:head#
2018-07-30T14:05:01.646 INFO:teuthology.orchestra.run.smithi187.stderr:CompressibleData (4xAU) Write
2018-07-30T14:05:01.648 INFO:teuthology.orchestra.run.smithi187.stderr:CompressibleData partial overwrite
2018-07-30T14:05:01.650 INFO:teuthology.orchestra.run.smithi187.stderr:CompressibleData partial overwrite, two extents overlapped, single one to be removed
2018-07-30T14:05:01.652 INFO:teuthology.orchestra.run.smithi187.stderr:Small chunk partial overwrite, two extents overlapped, single one to be removed
2018-07-30T14:05:01.652 INFO:teuthology.orchestra.run.smithi187.stderr:Cleaning object
2018-07-30T14:05:02.565 INFO:teuthology.orchestra.run.smithi187.stderr:CompressibleData large blob
2018-07-30T14:05:03.314 INFO:teuthology.orchestra.run.smithi187.stderr:Cleaning
2018-07-30T14:05:03.315 INFO:teuthology.orchestra.run.smithi187.stderr:Creating collection meta
2018-07-30T14:05:03.315 INFO:teuthology.orchestra.run.smithi187.stdout:/build/ceph-14.0.0-1708-g37a0ef9/src/test/objectstore/store_test.cc:884: Failure
2018-07-30T14:05:03.315 INFO:teuthology.orchestra.run.smithi187.stdout:Value of: !exists
2018-07-30T14:05:03.315 INFO:teuthology.orchestra.run.smithi187.stdout:  Actual: false
2018-07-30T14:05:03.315 INFO:teuthology.orchestra.run.smithi187.stdout:Expected: true
2018-07-30T14:05:03.885 INFO:teuthology.orchestra.run.smithi187.stdout:==> rm -r bluestore.test_temp_dir
2018-07-30T14:05:03.901 INFO:teuthology.orchestra.run.smithi187.stdout:[  FAILED  ] ObjectStore/StoreTest.CompressionTest/2, where GetParam() = "bluestore" (3339 ms)

/a/sage-2018-07-30_13:46:50-rados-wip-sage3-testing-2018-07-28-1512-distro-basic-smithi/2838694

I think this is a problem with the OpSequencer not getting preserved across collection remove and recreation. That's getting fixed in the wip-pg-merge branch!

Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from 12 to Resolved

fixed by 044ce83b1e032b5996cad10bc1cf83918f991550

Actions

Also available in: Atom PDF